门铃设置页选择 WiFi

--- a/app/src/main/res/layout/fragment_bind_doorbell.xml
+++ b/app/src/main/res/layout/fragment_bind_doorbell.xml
@@ -129,5 +129,7 @@
     <FrameLayout
         android:id="@+id/fLayout_bind_device_list_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/custom_toolbar"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
