--- a/app/src/main/res/layout/layout_dialog_low_battery.xml
+++ b/app/src/main/res/layout/layout_dialog_low_battery.xml
@@ -1,73 +1,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/y280"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".n.view.cam.SetSensitivityDialogFragment">
 
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    app:cardCornerRadius="9dp"
-    android:background="@color/color_white"
-    android:layout_height="wrap_content">
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        app:cardCornerRadius="@dimen/y9">
 
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/low_battery_popup_top" />
+            android:background="@color/color_white"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/doorbell_pic_popup" />
-    </FrameLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/DOOR_LOW_BATTERY"
-            android:layout_marginTop="@dimen/y17"
-            android:layout_marginStart="@dimen/y23"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp16" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_low_battery_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/y23"
-            android:layout_marginEnd="@dimen/y14"
-            android:layout_marginTop="@dimen/y17"
-            android:text="@string/DOOR_BETTERYMESG"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp14" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/low_battery_popup_top" />
 
-        <TextView
-            android:id="@+id/tv_low_battery_dismiss"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y38"
-            android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/y27"
-            android:layout_marginBottom="@dimen/y19"
-            android:gravity="center"
-            android:text="@string/I_KNOW"
-            android:textColor="@color/color_4b9fd5"
-            android:textSize="@dimen/sp14" />
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/doorbell_pic_popup" />
+            </FrameLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/y23"
+                android:layout_marginTop="@dimen/y17"
+                android:text="@string/DOOR_LOW_BATTERY"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp16" />
+
+            <TextView
+                android:id="@+id/tv_low_battery_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/y14"
+                android:layout_marginStart="@dimen/y23"
+                android:layout_marginTop="@dimen/y17"
+                android:text="@string/DOOR_BETTERYMESG"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp14" />
+
+            <TextView
+                android:id="@+id/tv_low_battery_dismiss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginBottom="@dimen/y19"
+                android:layout_marginEnd="@dimen/y27"
+                android:layout_marginTop="@dimen/y38"
+                android:gravity="center"
+                android:text="@string/I_KNOW"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="@dimen/sp14" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
     <ImageView
         android:id="@+id/imgv_close_dialog"
         android:layout_width="wrap_content"
