--- a/app/src/main/res/layout/layout_item_picture_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_picture_wonderful.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:hunt="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/lLayout_item_wonderful"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lLayout_item_wonderful"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:orientation="horizontal"
+    android:paddingEnd="@dimen/y10"
+    android:paddingStart="@dimen/y10">
 
     <com.cylan.jiafeigou.widget.FateLineView
         android:id="@+id/fl_wonderful_item_time_line"
@@ -14,50 +14,50 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/rLayout_wonderful_item_wonder"
         android:layout_alignTop="@+id/rLayout_wonderful_item_wonder"
-        android:layout_marginLeft="8dp"
-        android:paddingRight="2dp"
+        android:layout_marginStart="@dimen/y8"
+        android:paddingEnd="@dimen/y2"
         hunt:dashLineColor="@color/color_e8e8e8"
-        hunt:dashLineWidth="1dp"
+        hunt:dashLineWidth="@dimen/y1"
         hunt:innerCircleColor="@color/color_white"
-        hunt:innerCircleRadius="3dp"
+        hunt:innerCircleRadius="@dimen/y3"
         hunt:outerCircleColor="@color/color_e8e8e8"
-        hunt:outerCircleRadius="5dp"
-        hunt:outerCircleStrokeWidth="3dp"
-        hunt:outerCircleY="17dp"/>
+        hunt:outerCircleRadius="@dimen/y5"
+        hunt:outerCircleStrokeWidth="@dimen/y3"
+        hunt:outerCircleY="@dimen/y17" />
 
     <RelativeLayout
         android:id="@+id/rLayout_wonderful_item_wonder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/fl_wonderful_item_time_line"
+        android:layout_marginStart="@dimen/y4"
+        android:layout_toEndOf="@+id/fl_wonderful_item_time_line"
         android:orientation="vertical"
-        android:paddingBottom="8dp">
+        android:paddingBottom="@dimen/y8">
 
         <TextView
             android:id="@+id/tv_wonderful_item_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="@dimen/y14"
             android:gravity="center"
             android:text="Hi~"
             android:textColor="@color/color_666666"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/sp13" />
 
         <com.cylan.jiafeigou.widget.ShadowFrameLayout
             android:id="@+id/sf_picture_container"
-            android:layout_width="162dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/y162"
+            android:layout_height="@dimen/y120"
             android:layout_below="@+id/tv_wonderful_item_date">
 
             <ImageView
                 android:id="@+id/iv_wonderful_item_content"
-                android:layout_width="162dp"
-                android:layout_height="120dp"
-                android:minWidth="200dp"
+                android:layout_width="@dimen/y162"
+                android:layout_height="@dimen/y120"
+                android:minWidth="@dimen/y200"
                 android:scaleType="fitXY"
-                android:transitionName="picDetailsFragment"/>
+                android:transitionName="picDetailsFragment" />
         </com.cylan.jiafeigou.widget.ShadowFrameLayout>
 
 
@@ -66,8 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/sf_picture_container"
-            android:paddingBottom="22dp"
-            android:paddingTop="19dp">
+            android:paddingBottom="@dimen/y22"
+            android:paddingTop="@dimen/y19">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,17 +80,17 @@
                     android:id="@+id/tv_wonderful_item_delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/y12"
                     android:paddingEnd="@dimen/y10"
+                    android:paddingStart="@dimen/y12"
                     android:text="@string/DELETE"
                     android:textColor="@color/color_4b9fd5"
-                    android:textSize="@dimen/sp11"/>
+                    android:textSize="@dimen/sp11" />
 
                 <View
-                    android:layout_width="1dp"
-                    android:layout_height="10dp"
+                    android:layout_width="@dimen/y1"
+                    android:layout_height="@dimen/y10"
                     android:layout_gravity="center_vertical"
-                    android:background="@color/color_e8e8e8"/>
+                    android:background="@color/color_e8e8e8" />
 
                 <TextView
                     android:id="@+id/tv_wonderful_item_device_name"
@@ -98,23 +98,23 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:maxLength="8"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingEnd="@dimen/y10"
+                    android:paddingStart="@dimen/y10"
                     android:textColor="@color/color_909090"
-                    android:textSize="@dimen/sp11"/>
+                    android:textSize="@dimen/sp11" />
 
                 <TextView
                     android:id="@+id/tv_wonderful_item_share"
                     style="@style/ripple_background_borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
-                    android:drawablePadding="4dp"
+                    android:layout_marginEnd="@dimen/y12"
+                    android:drawablePadding="@dimen/y4"
                     android:drawableStart="@drawable/icon_share_item_wonderful_selector"
                     android:gravity="center"
                     android:text="@string/Tap3_ShareDevice_Button"
                     android:textColor="@color/color_909090"
-                    android:textSize="@dimen/sp11"/>
+                    android:textSize="@dimen/sp11" />
             </LinearLayout>
 
 
@@ -123,9 +123,9 @@
         <View
             android:id="@+id/view_wonder_bottom_line"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/y1"
             android:layout_below="@+id/fLayout_wonderful_item_bottom"
-            android:background="@color/color_e8e8e8"/>
+            android:background="@color/color_e8e8e8" />
     </RelativeLayout>
 
 
@@ -140,5 +140,5 @@
         android:paddingRight="@dimen/y5"
         android:text="@string/MSG_BOTTOM_LINE"
         android:textColor="#333333"
-        android:textSize="@dimen/sp14"/>
+        android:textSize="@dimen/sp14" />
 </RelativeLayout>
