1.邮箱注册，获取验证码前添加网络判断 2.邮箱手机注册输入框不行 3.显示提示文案错误修改 4.帮助反馈更换新的链接

--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -62,6 +62,7 @@
                         android:gravity="center"
                         android:hint="请输入手机号/邮箱"
                         android:maxLength="65"
+                        android:singleLine="true"
                         android:textColor="@color/color_666666"
                         android:textColorHint="@color/color_cecece"
                         android:textCursorDrawable="@drawable/bg_common_cursor"
