--- a/app/src/main/res/layout/fragment_login_layout_register_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_register_box.xml
@@ -35,6 +35,7 @@
                 android:inputType="phone"
                 android:maxLength="11"
                 android:maxLines="1"
+                android:singleLine="true"
                 android:paddingLeft="@dimen/x40"
                 android:paddingRight="@dimen/x40"
                 android:textColor="@color/color_666666"
