1.手机注册获取验证码计时偶尔不出现bug 2.退出登录不直接跳回欢迎页bug 3.登录注册的提示语不对修改 4.sd页面顶部栏修改

--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -25,12 +25,23 @@
             hunt:ct_left_title_color="@color/color_white"
             hunt:ct_title_color="@color/color_black" />
 
-        <ImageView
-            android:id="@+id/iv_logon"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y60"
-            android:layout_marginTop="@dimen/y56"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/iv_logon"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y60"
+                android:layout_marginTop="@dimen/y56"
+                android:src="@mipmap/ic_launcher" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y10"
+                android:background="@drawable/little_shape" />
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/tv_app_version"
