--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -60,7 +60,7 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:gravity="center"
-                        android:hint="请输入手机号/邮箱"
+                        android:hint="@string/Tap0_enterphoneoremail"
                         android:maxLength="65"
                         android:singleLine="true"
                         android:textColor="@color/color_666666"
