--- a/app/src/main/res/layout/layout_fragment_bell_setting.xml
+++ b/app/src/main/res/layout/layout_fragment_bell_setting.xml
@@ -64,25 +64,32 @@
             hunt:sv_title="@string/EQUIPMENT_INFO"
             hunt:sv_v_divider="false" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/y20"
-            android:layout_marginStart="@dimen/y20"
-            android:layout_marginTop="@dimen/y10"
-            android:text="@string/NETWORK"
-            android:textColor="@color/color_4b9fd5"
-            android:textSize="@dimen/sp15" />
-
-        <com.cylan.jiafeigou.widget.SettingItemView0
-            android:id="@+id/sv_setting_device_wifi"
+        <LinearLayout
+            android:id="@+id/ll_bell_net_work_container"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y72"
-            android:layout_marginEnd="@dimen/y20"
-            android:layout_marginStart="@dimen/y20"
-            hunt:sv_image_src="@drawable/setting_icon_information"
-            hunt:sv_title="@string/WIFI"
-            hunt:sv_v_divider="true" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/y20"
+                android:layout_marginStart="@dimen/y20"
+                android:layout_marginTop="@dimen/y10"
+                android:text="@string/NETWORK"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="@dimen/sp15" />
+
+            <com.cylan.jiafeigou.widget.SettingItemView0
+                android:id="@+id/sv_setting_device_wifi"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y72"
+                android:layout_marginEnd="@dimen/y20"
+                android:layout_marginStart="@dimen/y20"
+                hunt:sv_image_src="@drawable/setting_icon_information"
+                hunt:sv_title="@string/WIFI"
+                hunt:sv_v_divider="true" />
+        </LinearLayout>
 
 
         <TextView
