cid编号--->设备信息

--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -124,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/y15"
-                android:text="@string/Tap1_Setting_Cid"
+                android:text="@string/EQUIPMENT_INFO"
                 android:textColor="#4B9FD5"
                 android:textSize="@dimen/sp14" />
 
