--- a/app/src/main/res/layout/activity_cam_media.xml
+++ b/app/src/main/res/layout/activity_cam_media.xml
@@ -19,15 +19,17 @@
         android:layout_height="wrap_content"
         hunt:ct_enable_shadow="false"
         hunt:ct_fit_system_window="true"
-        hunt:ct_icon="@drawable/nav_icon_close_gary" />
+        hunt:ct_icon="@drawable/background_tab_selector" />
 
     <LinearLayout
         android:id="@+id/lLayout_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/fLayout_cam_handle_bar"
+        android:layout_below="@+id/vp_container"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:layout_marginTop="2dp"
         android:gravity="center"
         android:visibility="gone">
 
