1.手机号注册获取效验验证码之前增加账号检测 2.注册提交验证码跳转到设置密码前效验再效验账号 3.我的页面退出登录昵称头像清除 4.短信邀请修改 5.系统推送消息 6.三方登录图标错乱修改 ‘

--- a/app/src/main/res/layout/fragment_home_page_list_header.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_header.xml
@@ -26,6 +26,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:text="Hi"
             android:id="@+id/tvHeaderNickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
