--- a/app/src/main/res/layout/layout_fragment_bell_setting.xml
+++ b/app/src/main/res/layout/layout_fragment_bell_setting.xml
@@ -60,7 +60,7 @@
             android:layout_marginEnd="@dimen/y20"
             android:layout_marginStart="@dimen/y20"
             hunt:sv_image_src="@drawable/setting_icon_information"
-            hunt:sv_sub_title="@string/EQUIPMENT_INFO"
+            hunt:sv_sub_title="@string/EQUIPMENT_NAME"
             hunt:sv_title="@string/EQUIPMENT_INFO"
             hunt:sv_v_divider="false" />
 
