--- a/app/src/main/res/drawable/long_btn_bg_shape_f4f4f4.xml
+++ b/app/src/main/res/drawable/long_btn_bg_shape_f4f4f4.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/color_f4f4f4" />
 
-            <corners android:radius="@dimen/x63" />
+            <corners android:radius="63px" />
         </shape>
     </item>
 </layer-list>
