--- a/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
@@ -120,7 +120,7 @@
 
 
             <TextView
-                android:id="@+id/tv_to_live"
+                android:id="@+id/tv_jump_next"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end|center_vertical"
