--- a/app/src/main/res/values/vpi__attrs.xml
+++ b/app/src/main/res/values/vpi__attrs.xml
@@ -82,9 +82,9 @@
         <attr name="footerLineHeight" format="dimension" />
         <!-- Style of the indicator. Default is triangle. -->
         <attr name="footerIndicatorStyle">
-            <enum name="none" packValue="0" />
-            <enum name="triangle" packValue="1" />
-            <enum name="underline" packValue="2" />
+            <enum name="none" value="0" />
+            <enum name="triangle" value="1" />
+            <enum name="underline" value="2" />
         </attr>
         <!-- Height of the indicator above the footer line. -->
         <attr name="footerIndicatorHeight" format="dimension" />
@@ -94,8 +94,8 @@
         <attr name="footerPadding" format="dimension" />
         <!-- Position of the line. -->
         <attr name="linePosition">
-            <enum name="bottom" packValue="0" />
-            <enum name="top" packValue="1" />
+            <enum name="bottom" value="0" />
+            <enum name="top" value="1" />
         </attr>
         <!-- Color of the selected title. -->
         <attr name="selectedColor" />
